@@ -1,8 +1,5 @@
 package org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.security;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -11,71 +8,52 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.session.SessionRegistry;
-import org.springframework.security.core.session.SessionRegistryImpl;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
     @Bean
-    public JwtCookieFilter jwtCookieFilter() {
-        return new JwtCookieFilter();
-    }
-
-    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowCredentials(true);
-        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+        configuration.setAllowedHeaders(List.of("Cache-Control", "Content-Type","x-auth-token","Authorization"));
+        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000","http://localhost:8080"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        configuration.setExposedHeaders(List.of("x-auth-token"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    @Bean
-    public SessionRegistry sessionRegistry() {
-        return new SessionRegistryImpl();
-    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.cors(cors -> corsConfigurationSource());
         http.csrf(AbstractHttpConfigurer::disable);
-        http.addFilterBefore(jwtCookieFilter(), UsernamePasswordAuthenticationFilter.class);
         http.sessionManagement(
-            sessionMgmt ->
-                sessionMgmt
-                    .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
-                    .invalidSessionUrl("http://localhost:3000/login")
-                    .sessionFixation()
-                    .migrateSession()
-                    .maximumSessions(1) // one session per user
-                    .maxSessionsPreventsLogin(false)
-                    .expiredUrl("http://localhost:3000/login")
-                    .sessionRegistry(sessionRegistry())
+            sessionMgmt -> sessionMgmt.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
         );
         http.authorizeHttpRequests(
-            authorize ->
-                authorize
-                    .requestMatchers(
-                        HttpMethod.POST,
-                        "/token/login",
-                        "/token/refresh",
-                        "/token/logout",
-                        "/token/introspect"
-                    )
-                    .permitAll()
-                    .anyRequest()
-                    .authenticated()
+                authorize ->
+                        authorize
+                                .requestMatchers(
+                                        HttpMethod.POST,
+                                        "/token/login",
+                                        "/token/refresh",
+                                        "/token/logout",
+                                        "/token/introspect"
+                                )
+                                .permitAll()
+                                .anyRequest()
+                                .authenticated()
         );
         http.oauth2ResourceServer(t -> t.jwt(Customizer.withDefaults()));
         return http.build();
